<resources>
    <string name="app_name">Suitmedia Aplication</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="retry">Retry</string>
</resources>